--- a/charts/powerdns-operator/values.yaml
+++ b/charts/powerdns-operator/values.yaml
@@ -136,7 +136,7 @@ metrics:
     # -- Sets the families that should be supported and the order in which they should be applied to ClusterIP as well. Can be IPv4 and/or IPv6.
     ipFamilies: []
   serviceMonitor:
-    enabled: true
+    enabled: false
     namespace: ""
     labels: {}
     annotations: {}
