fix(deployment): prevent secretRef conflict when existingSecret is defined
Signed-off-by: Benjamin Pinchon <dev@mdfr.me>

--- a/charts/powerdns-operator/templates/deployment.yaml
+++ b/charts/powerdns-operator/templates/deployment.yaml
@@ -86,8 +86,7 @@ spec:
         {{- if .Values.credentials.existingSecret }}
         - secretRef:
             name: {{ .Values.credentials.existingSecret }}
-        {{- end }}
-        {{- if .Values.credentials.name }}
+        {{- else if .Values.credentials.name }}
         - secretRef:
             name: {{ .Values.credentials.name }}
         {{- end }}
