--- a/charts/powerdns-operator/Chart.yaml
+++ b/charts/powerdns-operator/Chart.yaml
@@ -4,18 +4,18 @@ description: Manage PowerDNS resources with Kubernetes
 type: application
 version: 0.4.2
 appVersion: 0.4.2
-kubeVersion: '>= 1.21.0-0'
+kubeVersion: ">= 1.21.0-0"
 keywords:
   - powerdns-operator
   - powerdns
   - dns
-home: https://orange-opensource.github.io/PowerDNS-Operator-helm-chart
-icon: https://github.com/Orange-OpenSource/PowerDNS-Operator/blob/main/docs/assets/favicon.png?raw=true
+home: https://powerdns-operator.github.io/PowerDNS-Operator-helm-chart
+icon: https://github.com/powerdns-operator/PowerDNS-Operator/blob/main/docs/assets/favicon.png?raw=true
 maintainers:
-- name: antrema
-- name: mydoomfr
+  - name: antrema
+  - name: mydoomfr
 sources:
-  - https://github.com/Orange-OpenSource/PowerDNS-Operator-helm-chart
+  - https://github.com/powerdns-operator/PowerDNS-Operator-helm-chart
 annotations:
   artifacthub.io/crds: |
     - kind: ClusterZone
