--- a/charts/powerdns-operator/templates/deployment.yaml
+++ b/charts/powerdns-operator/templates/deployment.yaml
@@ -75,6 +75,12 @@ spec:
         - --leader-elect
         - --health-probe-bind-address=:8081
         - --metrics-bind-address=:{{ .Values.metrics.service.port }}
+        {{- if .Values.api.url }}
+        - --pdns-api-url={{ .Values.api.url }}
+        {{- end }}
+        {{- if .Values.api.vhost }}
+        - --pdns-api-vhost={{ .Values.api.vhost }}
+        {{- end }}
         ports:
         - containerPort: {{ .Values.metrics.service.port }}
           protocol: TCP
