--- a/charts/powerdns-operator/templates/deployment.yaml
+++ b/charts/powerdns-operator/templates/deployment.yaml
@@ -81,6 +81,9 @@ spec:
         {{- if .Values.api.vhost }}
         - --pdns-api-vhost={{ .Values.api.vhost }}
         {{- end }}
+        {{- if .Values.api.timeoutSeconds }}
+        - --pdns-api-timeout="{{ .Values.api.timeoutSeconds }}"
+        {{- end }}
         ports:
         - containerPort: {{ .Values.metrics.service.port }}
           protocol: TCP
