--- a/charts/powerdns-operator/values.yaml
+++ b/charts/powerdns-operator/values.yaml
@@ -34,6 +34,9 @@ api:
   # -- Specifies the PowerDNS VHOST
   vhost: "localhost"
 
+  # -- Specifies timeout to connect to PowerDNS (in seconds)
+  timeoutSeconds: "10"
+
 rbac:
   create: true
 
