refactor: deal with values as command args (#22)
* refactor: move unsensitive values to command args

Signed-off-by: Anthony TREUILLIER <anthony.treuillier@gmail.com>

* feat: add timeout for API connection

Signed-off-by: Anthony TREUILLIER <anthony.treuillier@gmail.com>

---------

Signed-off-by: Anthony TREUILLIER <anthony.treuillier@gmail.com>

--- a/charts/powerdns-operator/templates/deployment.yaml
+++ b/charts/powerdns-operator/templates/deployment.yaml
@@ -75,6 +75,15 @@ spec:
         - --leader-elect
         - --health-probe-bind-address=:8081
         - --metrics-bind-address=:{{ .Values.metrics.service.port }}
+        {{- if .Values.api.url }}
+        - --pdns-api-url={{ .Values.api.url }}
+        {{- end }}
+        {{- if .Values.api.vhost }}
+        - --pdns-api-vhost={{ .Values.api.vhost }}
+        {{- end }}
+        {{- if .Values.api.timeoutSeconds }}
+        - --pdns-api-timeout="{{ .Values.api.timeoutSeconds }}"
+        {{- end }}
         ports:
         - containerPort: {{ .Values.metrics.service.port }}
           protocol: TCP
