fix: timeout type value configuration
Signed-off-by: Benjamin Pinchon <dev@mdfr.me>

--- a/charts/powerdns-operator/templates/deployment.yaml
+++ b/charts/powerdns-operator/templates/deployment.yaml
@@ -82,7 +82,7 @@ spec:
         - --pdns-api-vhost={{ .Values.api.vhost }}
         {{- end }}
         {{- if .Values.api.timeoutSeconds }}
-        - --pdns-api-timeout="{{ .Values.api.timeoutSeconds }}"
+        - --pdns-api-timeout={{ .Values.api.timeoutSeconds }}
         {{- end }}
         ports:
         - containerPort: {{ .Values.metrics.service.port }}
