--- a/charts/powerdns-operator/values.yaml
+++ b/charts/powerdns-operator/values.yaml
@@ -35,7 +35,7 @@ api:
   vhost: "localhost"
 
   # -- Specifies timeout to connect to PowerDNS (in seconds)
-  timeoutSeconds: "10"
+  timeoutSeconds: 10
 
 rbac:
   create: true
